dss_add_test(NAME lsp/test_utf16_column         SOURCES test_utf16_column.cpp)
dss_add_test(NAME lsp/test_json_rpc             SOURCES test_json_rpc.cpp)
dss_add_test(NAME lsp/test_protocol             SOURCES test_protocol.cpp)
dss_add_test(NAME lsp/test_method_dispatcher    SOURCES test_method_dispatcher.cpp)
dss_add_test(NAME lsp/test_document_store       SOURCES test_document_store.cpp)
dss_add_test(NAME lsp/test_thread_pool          SOURCES test_thread_pool.cpp)
dss_add_test(NAME lsp/test_schema_cache         SOURCES test_schema_cache.cpp)
dss_add_test(NAME lsp/test_diagnostic_translator SOURCES test_diagnostic_translator.cpp)
dss_add_test(NAME lsp/test_lsp_server_e2e       SOURCES test_lsp_server_e2e.cpp)
dss_add_test(NAME lsp/test_lsp_replay           SOURCES test_lsp_replay.cpp)
target_link_libraries(dss_lsp_test_lsp_replay PRIVATE nlohmann_json::nlohmann_json)
